got add and view contacts functionality working with close to complete proper console output